@@ -90,7 +90,8 @@ bind 'v' "toggleDisplayStatus";
 bind 'A' "A";
 bind 'C-m' "list 'mark'";
 bind 'u' "list 'unmark'";
-bind 'Enter' "list 'mark';next";
+#bind 'Enter' "list 'mark';next";
+bind 'Enter' "list 'mark';goto _lastgotodirection";
 bind '-' "reduce";
 bind "Up" "pan_up";
 bind 'k' "pan_up";
